web/css/000-controls.css
body {
	margin: 0;
	padding: 0;
	background-color: #222222;
	font-family: "LM Roman", "Georgia", "Palatino Linotype", "Palatino", "Times New Roman", "Times", serif;
	color: #FFFFFF;
}

a {
	color: white;
	text-decoration: none;
}
a:hover {
	/* color: yellow; */
}

.title, .title:hover {
	font-size: medium;
	padding: 0.4em;
	font-weight: bold;
	line-height: 1.3em;
	text-align: left;
	cursor: default;
	word-wrap: break-word;
}

.fullScreen .title {
	display: none;
}

#media-view .title, #album-view.media-view-container {
	z-index: -1;
}

#album-view .title {
	padding-left: 0;
	padding-top: 0;
}

#album-view .title.hidden {
	padding: 0;
}

.title-count {
	font-size: 80%;
	font-style: italic;
	font-weight: normal;
	opacity: 0.7;
	filter: alpha(opacity=70); /* For IE8 and earlier */
}

.title-count-detail {
	cursor: pointer;
}

.hidden, .hidden-by-option, .hidden-by-fullscreen, .hidden-by-pinch {
	display: none !important;
}

img.title-img {
	padding-right: .5em;
}

img.thumbnail-img {
	padding-left: .5em;
}

.title-anchor, .title-no-anchor, .search-link, .folder-name img {
	padding: 0 .5em;
}

.second-line {
	font-size: 75%;
}

.gray {
	font-size: 95%;
	color: gray;
}

#popup-images-wrapper .gray {
	color: darkslategray;
}

.separated {
	padding-left: .6em;
	padding-right: .6em;
}

.title-anchor.italic {
	font-style: italic;
}

a.title-anchor.mobile {
	color: orange !important;
}

.italic {
	font-style: italic;
	/* color: gray; */
}

.messages .browsing-mode-message {
	display: none;
}

#file-name {
	font-size: 20%;
	line-height: 2em;
}

#please-fill {
	display: none;
	color: red;
	background-color: yellow;
	margin-left: auto;
	margin-right: auto;
	padding: ,2em;
	padding-left: 1em;
	padding-right: 1em;
	font-weight: bold;
	font-size: 125%;
}

.space-before {
	margin-left: 1em;
	margin-top: .8em;
	display: inline-block;
}

#album-view {
	position: absolute;
	padding: .5em;
}

#thumbs {
	clear: both;
}

#album-view:not(.media-view-container) #thumbs {
	padding-top: 1em;
}

#thumbs img {
	border: 0;
}

.thumb-container.current-thumb {
	border-top: 6px solid #FFAD27 !important;
	margin-top: 0;
}

#subalbums {
	padding-top: .2em;
	padding-bottom: 1em;
	overflow: hidden;
}

.album-button-and-caption {
	float: left;
	height: 250px;
	width: 200px;
	cursor: pointer;
	border: 1px solid white;
}
.album-button-and-caption.slide {
	border: 3px solid gray;
	border-left-color: whitesmoke;
	border-top-color: whitesmoke;
}
.album-button-and-caption.slide:hover {
	border: 3px solid gray;
	border-right-color: whitesmoke;
	border-bottom-color: whitesmoke;
}
.album-caption {
	margin: 0 auto;
	height: auto;
	color: white;
	font-size: inherit;
	padding-top: .2em;
}

.album-caption a {
	color: inherit;
}

.album-caption-count {
	margin-top: .2em;
	text-align: center;
	opacity: 0.7;
	filter: alpha(opacity=70); /* For IE8 and earlier */
	font-size: 80%;
	margin-bottom: .8em;
}

.album-description, .media-description {
	font-style: italic;
	padding-left: .7em;
	padding-right: .7em;
}

.media-description {
	text-align: left;
}

.album-description {
	line-height: 1.1em;
}

.album-tags, .album-caption-count, .album-description {
	margin-top: .5em;
}

p.description-text, p.description-text ul {
	margin-top: .1em;
	margin-bottom: 0;
}
.description ul {
	padding-inline-start: 1.5em;
}

.ellipsis {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}


/* this class is needed in order to get the thumbnails vertically centered,
 * see https://stackoverflow.com/questions/7273338/how-to-vertically-align-an-image-inside-a-div#7310398*/
.helper {
	display: inline-block;
	height: 100%;
	vertical-align: middle;
}
.album-button {
	border: 1px solid lightgray;
	border-right-color: whitesmoke;
	border-bottom-color: whitesmoke;
	white-space: nowrap;
	text-align: center;
	float: left;
	display: block;
	height: 200px;
	text-align: center;
	font-style: italic;
	font-size: 90%;
	background-color: inherit;
	margin: 0 auto;
	line-height: 1.1em;
	position: relative;
}

.album-button-and-caption.slide:hover .album-button {
	border-left-color: whitesmoke;
	border-top-color: whitesmoke;
	border-right-color: lightgray;
	border-bottom-color: lightgray;
}

.album-button-and-caption, .thumb-container {
	opacity: .9;
	filter: alpha(opacity=90); /* For IE8 and earlier */
}

.album-button-and-caption:hover, .thumb-and-caption-container:hover .thumb-container {
	opacity: 1;
	filter: alpha(opacity=100); /* For IE8 and earlier */
}

.album-button img, .thumb-container img {
	vertical-align: middle;
	max-width: 100%;
	max-height: 100%;
	height: auto;
}

#thumbs .thumb-container img.thumbnail {
/*
	do not remove, useful for debugging purpose
*/
}

.album-button-random-media-link, #thumbs .thumbnail-map-link, #subalbums .thumbnail-map-link, #thumbs .select-box, #subalbums .select-box, #media-select-box .select-box, #popup-images-wrapper .select-box {
	position: absolute;
	filter: alpha(opacity=30); /* For IE8 and earlier */
}

.album-button-random-media-link {
	opacity: .3;
	top: 5px;
	left: 5px;
	height: 30px;
}

#request-password:hover {
	color: black;
	background-color: white;
}

#thumbs .thumbnail-map-link, #subalbums .thumbnail-map-link, #thumbs .select-box, #subalbums .select-box, #media-select-box .select-box, #popup-images-wrapper .select-box {
	opacity: .3;
	height: 30px;
	cursor: pointer;
}

#thumbs .thumbnail-map-link, #subalbums .thumbnail-map-link {
	top: 5px;
	right: 5px;
}

#thumbs .select-box, #subalbums .select-box, #media-select-box .select-box, #popup-images-wrapper .select-box {
	bottom: 5px;
	left: 5px;
}

#media-select-box .select-box {
	position: fixed;
}

#thumbs .thumbnail-map-link:hover, #subalbums .thumbnail-map-link:hover, #thumbs .select-box:hover, #subalbums .select-box:hover, #media-select-box .select-box:hover {
	opacity: 1;
}
/* ... */

